change: timing in contact and footer

--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -67,21 +67,22 @@
                 <div class="con-info">
                     <h3>Visit the Studio</h3>
                     <ul>
-                        <li><i class="material-icons">map</i>184 Main Collins Street</li>
+                        <li><i class="material-icons">map</i>R.S.No.1028/16, Plot No.2, Swabhimani Mart Building, Near Podar School, Sunanda Park, Kolhapur</li>
                     </ul>
                 </div>
                 <div class="con-info">
                     <h3>Message Us</h3>
                     <ul>
-                        <li><i class="material-icons">map</i>(965) 436 3274</li>
-                        <li><i class="material-icons">map</i>diksha_fitness_studio@gmail.com</li>
+			    <li><i class="material-icons">map</i><a href="tel:+919975336402">+91 9975336402</a></li>
+
+                        <li><i class="material-icons">map</i> <a href="mailto:kadamdiksha2002@gmail.com">kadamdiksha2002@gmail.com</a> </li>
                     </ul>
                 </div>
                 <div class="con-info">
                     <h3>Opening Hours</h3>
                     <ul>
-                        <li><i class="material-icons">map</i>Mon - Fri:  6:30am - 07:45pm</li>
-                        <li><i class="material-icons">map</i>Sat - Sun:  8:30am - 05:45pm</li>
+                        <li><i class="material-icons">map</i>Mon - Sat:  Morning 6 to 8 and Evening 4 to 6</li>
+                        <li><i class="material-icons">map</i>Sun: Holiday </li>
                     </ul>
                 </div>
                 <div class="contact-social">
