--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -41,8 +41,8 @@
                 <div class="footer-widget pl-0 pl-lg-5">
                     <h2 class="fw-title">Open time</h2>
                     <ul>
-                        <li><i class="material-icons">alarm_on</i>Mon - Fri:  6:30am - 07:45pm</li>
-                        <li><i class="material-icons">alarm_on</i>Sat - Sun:  8:30am - 05:45pm</li>
+                        <li><i class="material-icons">alarm_on</i>Mon - Sat:  Morning 6 to 8 and Evening 4 to 6</li>
+                        <li><i class="material-icons">alarm_on</i>Sun: Holiday</li>
                     </ul>
                 </div>
             </div>
