fix: bg button in homepage
But still it is not transperant

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -119,7 +119,7 @@
 									<div class="hs-text">
 										<h2>Get slim and toned with yoga</h2>
 										<p>"Unleash your inner strength and embrace a healthier, fitter, and more balanced lifestyle through the powerful combination of mindful movement and deep connection at Diksha Fitness Studio." </p>
-										<div class="site-btn sb-white"><a href="{% url 'contact' %}" class="transperentBtn">Contact now</a></div>
+										<div class="site-btn sb-white transparentBtn"><a href="{% url 'contact' %}">Contact now</a></div>
 									</div>
 								</div>
 							</div>
@@ -133,7 +133,7 @@
 						<div class="hs-text">
 							<h2>Reduce your stress</h2>
 							<p> "Unwind, rejuvenate, and re-energize at Diksha Fitness Studio, where our transformative yoga sessions help you release tension and reduce stress for a more balanced, harmonious life." </p>
-							<div class="site-btn sb-white"><a href="{% url 'contact' %}" class="transperentBtn">Contact now</a></div>
+							<div class="transparentBtn site-btn sb-white"><a href="{% url 'contact' %}">Contact now</a></div>
 						</div>
 					</div>
 					<div class="hs-img">
