--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -1,14 +1,3 @@
-/* =================================
-------------------------------------
-  Ahana | Yoga HTML Template
-  Version: 1.0
- ------------------------------------
- ====================================*/
-
-/*----------------------------------------*/
-/* Template default CSS
-/*----------------------------------------*/
-
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700,700i|Playfair+Display:400,400i,700,700i&display=swap");
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 html,
@@ -4318,17 +4307,14 @@ only screen and (min-width: 576px) and (max-width: 767px),
 /*---------------------
   Custom css
 -----------------------*/
-.transperentBtn {
-	font-family: var(--font-primary);
+.transparentBtn {
 	font-weight: 500;
 	font-size: 15px;
 	letter-spacing: 1px;
 	display: inline-block;
-	padding: 14px 40px;
-	border-radius: 50px;
+	padding: 20px 40px;
+	border-radius: 15px;
 	transition: 0.3s;
-	color: #fff;
-	background: rgba(255, 255, 255, 0.1);
-	box-shadow: 0 0 15px rgba(0, 0, 0, 0.08);
-	border: 2px solid rgba(255, 255, 255, 0.1);
+	background-color: rgba(255, 255, 255, 0.353);
+	backdrop-filter: blur(10px);
   }
